# todo_list

./: pyproject.toml
src/todo_list/: __init__.py  todo_manager.py  ui_components.py
